src/parser/Aula1.java
/* Aula1.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. Aula1.java */
package parser;

import recovery.*;
import view.Janela;
import archives.CreateFile;

import java.awt.event.ActionEvent;
import java.awt.event.ActionListener;
import java.io.BufferedReader;
import java.io.File;
import java.io.FileNotFoundException;
import java.io.FileReader;
import java.io.IOException;
import javax.swing.JOptionPane;
import java.io.FileWriter;
import java.io.FileWriter;

public class Aula1/*@bgen(jjtree)*/implements Aula1TreeConstants, Aula1Constants {/*@bgen(jjtree)*/
  protected static JJTAula1State jjtree = new JJTAula1State();final static Janela janela = new Janela();
  static int linha;

  public static void main(String args []) throws ParseException
  {

        janela.setVisible(true);
        janela.botaoCompilador().addActionListener(new ActionListener() {
                public void actionPerformed(ActionEvent e) {
                        janela.removerFormatacaoCor();
                        janela.erros.clear();
                        janela.setVazioConsole();


                        if((janela.getTextArquivo().getText().equals(janela.getCampoTexto())) != true)
                {
                        janela.setControleArquivo(false);
                }

                if(janela.getControleArquivo() || janela.getTextArquivo().getText().equals(" ") )
                {

                                inicia();

                        }
                        else
                        {
                                if(!janela.getTextArquivo().getText().equals("")) {

                        if(janela.getFile() == null)
                        {
                                janela.salvarComo();

                                                inicia();
                        }else
                        {
                                janela.salvar();

                                                inicia();
                                }

                }
                }

                janela.verificaSeCompilou();

          }
        });
  }


static void inicia(){
  FileReader arql = null;

  try {
        arql = new FileReader(janela.getFile());

  } catch (FileNotFoundException e2) {

        e2.printStackTrace();
  }

  BufferedReader arq = new BufferedReader(arql);

  try {
        Aula1 parser = new Aula1(arq);

  }catch (Exception e1){

        Aula1.ReInit(arq);

  }catch (Error e1) {

        Aula1.ReInit(arq);
  }

  try {
    SimpleNode n = Aula1.Start();

        n.dump("", janela);

        }catch (Exception e1){

        }catch (Error e1) {
        }
}

  static public String im(int x)
  {
    int k;
        String s;
    s = tokenImage[x];
    k = s.lastIndexOf("\"");
    try {
      s = s.substring(1,k);
    }
   catch (StringIndexOutOfBoundsException e)
           {}
   return s;
  }

  static Token lastError = null;
  static boolean eof;

  static void consumeUntil(RecoverySet g, ParseException e, String met)
  throws ParseEOFException, ParseException
  {
    eof=false;
        Token tok;

        janela.setConsole("Bloco: '" + met + "'");
        janela.setConsole("Conjunto de sincroniza\u00e7\u00e3o: " + g);

        if (g == null) throw e;

        tok = getToken(1);

        while ( ! eof ) {
          if ( g.contains(tok.kind)) {
            janela.setConsole("Encontrado token de sincroniza\u00e7\u00e3o: '"  + im(tok.kind)+"'" );
            break;
          }

          janela.setConsole("Ignorando o token: " + im(tok.kind));

          getNextToken();
      tok = getToken(1);
          if (tok.kind == EOF && ! g.contains(EOF) )
              eof = true;
        }

    if ( tok != lastError)  {
      janela.MarcaLinhaErro(e.getMessage());
          janela.setConsole(e.getMessage());
          lastError = tok;

        }

        if ( eof )
          throw new ParseEOFException("Encontrei EOF onde n\u00e3o deveria.");
  }

  static final public SimpleNode Start() throws ParseException {
    trace_call("Start");
    try {
/*@bgen(jjtree) Start */
  SimpleNode jjtn000 = new SimpleNode(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        main();
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
{if ("" != null) return jjtn000;}
      } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Start");
    }
}

  static final public int main() throws ParseException {
    trace_call("main");
    try {
/*@bgen(jjtree) main */
   SimpleNode jjtn000 = new SimpleNode(JJTMAIN);
   boolean jjtc000 = true;
   jjtree.openNodeScope(jjtn000);RecoverySet g = Follow.main;
      try {
        try {
          label_1:
          while (true) {
            comandos();
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case INTEIRO:
            case FLOAT:
            case STRING:
            case BOLLEAN:
            case IF:
            case FOR:
            case WHILE:{
              ;
              break;
              }
            default:
              jj_la1[0] = jj_gen;
              break label_1;
            }
          }
        } catch (ParseException e) {
consumeUntil(g, e, "main");
        }
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
{if ("" != null) return 0;}
      } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("main");
    }
}

  static final public void comandos() throws ParseException {
    trace_call("comandos");
    try {
/*@bgen(jjtree) comandos */
  SimpleNode jjtn000 = new SimpleNode(JJTCOMANDOS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);RecoverySet g= Follow.comandos;
      try {
        try {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case INTEIRO:
          case FLOAT:
          case STRING:
          case BOLLEAN:{
            atribuicao();
            break;
            }
          case IF:{
            condicional();
            break;
            }
          case FOR:
          case WHILE:{
            repeticao();
            break;
            }
          default:
            jj_la1[1] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        } catch (ParseException e) {
consumeUntil(g,e,"comandos");
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
      }
    } finally {
      trace_return("comandos");
    }
}

  static final public void bloco() throws ParseException {
    trace_call("bloco");
    try {
/*@bgen(jjtree) bloco */
  SimpleNode jjtn000 = new SimpleNode(JJTBLOCO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);RecoverySet g= Follow.bloco;
      try {
        try {
          abreChave();
          label_2:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case INTEIRO:
            case FLOAT:
            case STRING:
            case BOLLEAN:
            case IF:
            case FOR:
            case WHILE:{
              ;
              break;
              }
            default:
              jj_la1[2] = jj_gen;
              break label_2;
            }
            comandos();
          }
          fechaChave();
        } catch (ParseException e) {
consumeUntil(g, e, "bloco");
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("bloco");
    }
}

  static final public void atribuicao() throws ParseException {
    trace_call("atribuicao");
    try {
/*@bgen(jjtree) atribuicao */
  SimpleNode jjtn000 = new SimpleNode(JJTATRIBUICAO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);RecoverySet g= Follow.atribuicao;
      try {
        try {
          tipoDado();
          variavel();
          label_3:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case VIRGULA:{
              ;
              break;
              }
            default:
              jj_la1[3] = jj_gen;
              break label_3;
            }
            virgula();
            variavel();
          }
          igual();
          dado();
          pontoVirgula();
        } catch (ParseException e) {
consumeUntil(g, e, "atribuicao");
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("atribuicao");
    }
}

  static final public void condicional() throws ParseException {
    trace_call("condicional");
    try {
/*@bgen(jjtree) condicional */
  SimpleNode jjtn000 = new SimpleNode(JJTCONDICIONAL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);RecoverySet g= Follow.condicional;
      try {
        try {
          ifBloco();
          abreParenteses();
          expressao();
          fechaParenteses();
          bloco();
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case ELSE:{
            elseBloco();
            bloco();
            break;
            }
          default:
            jj_la1[4] = jj_gen;
            ;
          }
        } catch (ParseException e) {
consumeUntil(g, e, "condicional");
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("condicional");
    }
}

  static final public void repeticao() throws ParseException {
    trace_call("repeticao");
    try {
/*@bgen(jjtree) repeticao */
  SimpleNode jjtn000 = new SimpleNode(JJTREPETICAO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);RecoverySet g= Follow.repeticao;
      try {
        try {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case FOR:{
            para();
            break;
            }
          case WHILE:{
            enquanto();
            break;
            }
          default:
            jj_la1[5] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        } catch (ParseException e) {
consumeUntil(g, e, "repeticao");
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("repeticao");
    }
}

  static final public void tipoDado() throws ParseException {
    trace_call("tipoDado");
    try {
/*@bgen(jjtree) tipoDado */
  SimpleNode jjtn000 = new SimpleNode(JJTTIPODADO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);RecoverySet g= Follow.tipoDado;
      try {
        try {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case INTEIRO:{
            inteiroTipo();
            break;
            }
          case FLOAT:{
            floatTipo();
            break;
            }
          case STRING:{
            stringTipo();
            break;
            }
          case BOLLEAN:{
            bolleanTipo();
            break;
            }
          default:
            jj_la1[6] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        } catch (ParseException e) {
consumeUntil(g, e, "tipoDado");
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("tipoDado");
    }
}

  static final public void variavel() throws ParseException {
    trace_call("variavel");
    try {
/*@bgen(jjtree) variavel */
  SimpleNode jjtn000 = new SimpleNode(JJTVARIAVEL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);RecoverySet g= Follow.variavel;
      try {
        try {
          label_4:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case CARACTERE:{
              caractere();
              break;
              }
            case DIGITO:{
              digito();
              break;
              }
            case PONTO:{
              ponto();
              break;
              }
            default:
              jj_la1[7] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case PONTO:
            case DIGITO:
            case CARACTERE:{
              ;
              break;
              }
            default:
              jj_la1[8] = jj_gen;
              break label_4;
            }
          }
        } catch (ParseException e) {
consumeUntil(g, e, "variavel");
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("variavel");
    }
}

  static final public void dado() throws ParseException {
    trace_call("dado");
    try {
/*@bgen(jjtree) dado */
  SimpleNode jjtn000 = new SimpleNode(JJTDADO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);RecoverySet g= Follow.dado;
      try {
        try {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 41:{
            string();
            break;
            }
          case TRUE:
          case FALSE:{
            bool();
            break;
            }
          case ABRE_PARENTESES:
          case PONTO:
          case MENOS:
          case MAIS:
          case DIGITO:
          case CARACTERE:{
            operacao();
            break;
            }
          default:
            jj_la1[9] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        } catch (ParseException e) {
consumeUntil(g, e, "dado");
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("dado");
    }
}

  static final public void operacao() throws ParseException {
    trace_call("operacao");
    try {
/*@bgen(jjtree) operacao */
  SimpleNode jjtn000 = new SimpleNode(JJTOPERACAO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);RecoverySet g= Follow.operacao;
      try {
        try {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case MENOS:
          case MAIS:{
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case MAIS:{
              mais();
              break;
              }
            case MENOS:{
              menos();
              break;
              }
            default:
              jj_la1[10] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
            break;
            }
          default:
            jj_la1[11] = jj_gen;
            ;
          }
          termoOuFatorAritmetico();
          label_5:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case MENOS:
            case MAIS:
            case DIVISAO:
            case MULTIPLICACAO:
            case POTENCIA:{
              ;
              break;
              }
            default:
              jj_la1[12] = jj_gen;
              break label_5;
            }
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case MAIS:{
              mais();
              break;
              }
            case MENOS:{
              menos();
              break;
              }
            case MULTIPLICACAO:{
              multiplicacao();
              break;
              }
            case DIVISAO:{
              divisao();
              break;
              }
            case POTENCIA:{
              potencia();
              break;
              }
            default:
              jj_la1[13] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
            termoOuFatorAritmetico();
          }
        } catch (ParseException e) {
consumeUntil(g, e, "operacao");
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("operacao");
    }
}

  static final public void termoOuFatorAritmetico() throws ParseException {
    trace_call("termoOuFatorAritmetico");
    try {
/*@bgen(jjtree) termoOuFatorAritmetico */
  SimpleNode jjtn000 = new SimpleNode(JJTTERMOOUFATORARITMETICO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);RecoverySet g= Follow.termoOuFatorAritmetico;
      try {
        try {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case ABRE_PARENTESES:{
            abreParenteses();
            operacao();
            fechaParenteses();
            break;
            }
          case PONTO:
          case DIGITO:
          case CARACTERE:{
            variavel();
            break;
            }
          default:
            jj_la1[14] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        } catch (ParseException e) {
consumeUntil(g, e, "termoOuFatorAritmetico");
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("termoOuFatorAritmetico");
    }
}
